Adds new config for using seconds instead of miliseconds, fixes #35 (#44)
* Possible fix for issues in #35

* Adds Options Flow

* Update custom_components/elegoo_printer/translations/en.json

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Update custom_components/elegoo_printer/config_flow.py

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* bumping ruff version

* fixing issues with linting

* 📝 Add docstrings to `feature/seconds_selection` (#45)

Docstrings generation was requested by @danielcherubini.

* https://github.com/danielcherubini/elegoo-homeassistant/pull/44#issuecomment-2868949386

The following files were modified:

* `custom_components/elegoo_printer/config_flow.py`
* `custom_components/elegoo_printer/sensor.py`

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* try this

* stuff

* semi-working

* passing use seconds through

* Update custom_components/elegoo_printer/config_flow.py

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fixing formatting

* fixes initi

* refactoring config flow

* whoops

* fixing makefile

* bumping version

* moving debug

* fixing poling

* fixes issues with setup

* renames use_seconds to centauri_carbon

* better error message about printerip

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -1,19 +1,20 @@
 {
-    "config": {
-        "step": {
-            "printer": {
-                "description": "If you need help with the configuration have a look here: https://github.com/danielcherubini/elegoo_printer",
-                "data": {
-                    "ip_address": "Printer IP Address"
-                }
-            }
-        },
-        "error": {
-            "connection": "Unable to connect to the printer.",
-            "unknown": "Unknown error occurred."
-        },
-        "abort": {
-            "already_configured": "This entry is already configured."
+  "config": {
+    "step": {
+      "printer": {
+        "description": "If you need help with the configuration have a look here: https://github.com/danielcherubini/elegoo_printer",
+        "data": {
+          "ip_address": "Printer IP Address",
+          "centauri_carbon": "Is the printer a Centauri Carbon"
         }
+      }
+    },
+    "error": {
+      "connection": "Unable to connect to the printer.",
+      "unknown": "Unknown error occurred."
+    },
+    "abort": {
+      "already_configured": "This entry is already configured."
     }
+  }
 }
