feat: Add end_time sensor and refactor time handling
This commit introduces a new `end_time` sensor that displays the estimated completion time of a print.

To support this, the handling of `remaining_ticks` has been refactored to ensure consistency across different printer types. The conversion of `remaining_ticks` from seconds to milliseconds for FDM printers is now handled in the model layer, simplifying the sensor implementation.

Changes include:
- Added `end_time` sensor to `definitions.py` and `translations/en.json`.
- Modified `elegoo_sdcp/models/status.py` to handle time conversion.
- Updated `elegoo_sdcp/client.py` to pass `printer_type` to the model.
- Removed conditional time unit logic from `sensor.py`.

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -107,6 +107,9 @@
           "nozzle_temp_sensor_offline": "Nozzle temperature sensor offline",
           "bed_temp_sensor_offline": "Bed temperature sensor offline"
         }
+      },
+      "end_time": {
+        "name": "End Time"
       }
     }
   }
