--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -28,11 +28,18 @@
           "proxy_enabled": "Enable the proxy server"
         }
       },
-      "manual_options": {
-        "title": "Printer Options",
-        "description": "Configure additional options for your selected printer.",
+      "fdm_options": {
+        "title": "FDM Printer Options",
+        "description": "Configure additional options for your selected printer. [Read more about the proxy server](https://github.com/danielcherubini/elegoo-homeassistant/discussions/185).",
         "data": {
           "proxy_enabled": "Enable the proxy server"
+        }
+      },
+      "resin_options": {
+        "title": "Resin Printer Options",
+        "description": "Enabling the camera can create instability in the printer. Use at your own risk. [Read more for details and best practices](https://github.com/danielcherubini/elegoo-homeassistant/discussions/199).",
+        "data": {
+          "camera_enabled": "Enable the camera"
         }
       }
     },
