--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -28,17 +28,30 @@
           "proxy_enabled": "Enable the proxy server"
         }
       },
-      "manual_options": {
-        "title": "Printer Options",
-        "description": "Configure additional options for your selected printer.",
+      "fdm_options": {
+        "title": "FDM Printer Options",
+        "description": "Configure additional options for your selected printer. [Read more about the proxy server](https://github.com/danielcherubini/elegoo-homeassistant/discussions/185).",
         "data": {
           "proxy_enabled": "Enable the proxy server"
+        }
+      },
+      "resin_options": {
+        "title": "Resin Printer Options",
+        "description": "Enabling the camera can create instability in the printer. Use at your own risk. [Read more for details and best practices](https://github.com/danielcherubini/elegoo-homeassistant/discussions/199).",
+        "data": {
+          "camera_enabled": "Enable the camera"
         }
       }
     },
     "error": {
       "connection": "Unable to connect to the printer.",
-      "unknown": "Unknown error occurred."
+      "unknown": "Unknown error occurred.",
+      "invalid_printer_selection": "Invalid printer selection.",
+      "no_printer_found": "No printer could be found at the specified IP address.",
+      "validation_no_printer_found": "Validation failed: No printer was found.",
+      "no_printer_selected_or_ip_provided": "Please select a discovered printer or provide an IP address.",
+      "manual_options_no_printer_found": "The selected printer could not be found to apply options.",
+      "init_no_printer_found": "Failed to initialize: The printer could not be found."
     },
     "abort": {
       "already_configured": "This entry is already configured."
