Adds Loading and Unloading Filament to enum

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -86,6 +86,7 @@
           "exposure_testing": "Exposure Testing",
           "devices_testing": "Device Testing",
           "leveling": "Leveling"
+          "loading_unloading": "Loading\Unloading Material"
         }
       },
       "print_error": {
