--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -85,8 +85,8 @@
           "file_transferring": "File Transferring",
           "exposure_testing": "Exposure Testing",
           "devices_testing": "Device Testing",
-          "leveling": "Leveling"
-          "loading_unloading": "Loading or Unloading"
+          "leveling": "Leveling",
+          "loading_unloading": "Loading / Unloading"
         }
       },
       "print_error": {
