Adds Loading and Unloading Filament to enum (#252)
* Adds Loading and Unloading Filament to enum

* changing the words here

* fixes to json

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -85,7 +85,8 @@
           "file_transferring": "File Transferring",
           "exposure_testing": "Exposure Testing",
           "devices_testing": "Device Testing",
-          "leveling": "Leveling"
+          "leveling": "Leveling",
+          "loading_unloading": "Loading / Unloading"
         }
       },
       "print_error": {
