--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -123,7 +123,7 @@
           "disconnect_app": "App disconnected during print",
           "nozzle_temp_sensor_offline": "Nozzle temperature sensor offline",
           "bed_temp_sensor_offline": "Bed temperature sensor offline",
-          "filament_about_to_runout": "Filament runout detected"
+          "filament_about_to_runout": "Filament runout imminent"
         }
       },
       "end_time": {
