--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -88,6 +88,7 @@
           "exposure_testing": "Exposure Testing",
           "devices_testing": "Device Testing",
           "leveling": "Leveling",
+          "homing": "Homing",
           "loading_unloading": "Loading / Unloading"
         }
       },
