Add optional external IP override for Kubernetes/Docker setups
This change addresses issue #284 where users running Home Assistant in
Kubernetes or Docker containers with external load balancers (like MetalLB)
experience broken video streams in the proxied printer page. The integration
was auto-detecting the internal container/pod IP instead of the externally
routable IP, making video streams inaccessible from browsers.

Changes:
- Add optional "external_ip" configuration field to both initial setup and options flow
- Update PrinterData.get_local_ip() to accept optional external IP parameter
- Update all URL generation points to use external IP when configured:
  * Device configuration URLs (entity.py)
  * Printer URL sensor (printer.py)
  * Camera stream URLs (camera.py)
  * Thumbnail URLs (api.py)
- Add translation strings with helpful descriptions for the new field
- Maintain backward compatibility: auto-detection works when field is empty

The solution allows users in advanced network setups to manually specify
the externally routable IP address while maintaining automatic detection
for standard installations.

Fixes #284

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -6,7 +6,11 @@
         "data": {
           "ip_address": "Printer IP Address",
           "centauri_carbon": "Is this an FDM Printer",
-          "proxy_enabled": "Enable the proxy server"
+          "proxy_enabled": "Enable the proxy server",
+          "external_ip": "External IP Address (optional, for Kubernetes/Docker setups)"
+        },
+        "data_description": {
+          "external_ip": "Override auto-detected IP address. Leave blank for automatic detection. Use this if running Home Assistant in Kubernetes or Docker with external load balancer."
         }
       }
     }
@@ -25,7 +29,11 @@
         "description": "If you need help with the configuration have a look here: https://github.com/danielcherubini/elegoo-homeassistant",
         "data": {
           "ip_address": "Printer IP Address",
-          "proxy_enabled": "Enable the proxy server"
+          "proxy_enabled": "Enable the proxy server",
+          "external_ip": "External IP Address (optional, for Kubernetes/Docker setups)"
+        },
+        "data_description": {
+          "external_ip": "Override auto-detected IP address. Leave blank for automatic detection. Use this if running Home Assistant in Kubernetes or Docker with external load balancer."
         }
       },
       "fdm_options": {
