Fix external_ip persistence and support hostnames
Three key improvements:

1. Persist external_ip in manual_ip config flow
   The external_ip from user_input was not being applied to the printer
   object before saving during initial setup, causing it to be lost on
   restart. Now external_ip is set on the printer object before saving.

2. Use external_ip in proxy VideoUrl rewriting
   The proxy server's WebSocket message handler was rewriting VideoUrl
   using auto-detected IP without considering the configured external_ip.
   Now the proxy retrieves the printer from the registry and uses
   PrinterData.get_local_ip() with external_ip if configured.

3. Support hostnames in addition to IP addresses
   Updated translations to clarify that external_ip can be a hostname
   or IP address. This allows users behind reverse proxies to use
   hostnames like 'elegoo.mydomain.com'. Ports 3030 and 3031 are
   automatically appended, allowing users to proxy these ports via
   their reverse proxy configuration.

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -7,10 +7,10 @@
           "ip_address": "Printer IP Address",
           "centauri_carbon": "Is this an FDM Printer",
           "proxy_enabled": "Enable the proxy server",
-          "external_ip": "External IP Address (optional, for Kubernetes/Docker setups)"
+          "external_ip": "External Address (optional, for advanced network setups)"
         },
         "data_description": {
-          "external_ip": "Override auto-detected IP address. Leave blank for automatic detection. Use this if running Home Assistant in Kubernetes or Docker with external load balancer."
+          "external_ip": "Override auto-detected address with an IP address or hostname. Leave blank for automatic detection. Use for Kubernetes/Docker setups or when behind a reverse proxy. Ports 3030 and 3031 will be appended automatically."
         }
       }
     }
@@ -30,10 +30,10 @@
         "data": {
           "ip_address": "Printer IP Address",
           "proxy_enabled": "Enable the proxy server",
-          "external_ip": "External IP Address (optional, for Kubernetes/Docker setups)"
+          "external_ip": "External Address (optional, for advanced network setups)"
         },
         "data_description": {
-          "external_ip": "Override auto-detected IP address. Leave blank for automatic detection. Use this if running Home Assistant in Kubernetes or Docker with external load balancer."
+          "external_ip": "Override auto-detected address with an IP address or hostname. Leave blank for automatic detection. Use for Kubernetes/Docker setups or when behind a reverse proxy. Ports 3030 and 3031 will be appended automatically."
         }
       },
       "fdm_options": {
