Add optional external IP override for Kubernetes/Docker setups (#285)
* Add optional external IP override for Kubernetes/Docker setups

This change addresses issue #284 where users running Home Assistant in
Kubernetes or Docker containers with external load balancers (like MetalLB)
experience broken video streams in the proxied printer page. The integration
was auto-detecting the internal container/pod IP instead of the externally
routable IP, making video streams inaccessible from browsers.

Changes:
- Add optional "external_ip" configuration field to both initial setup and options flow
- Update PrinterData.get_local_ip() to accept optional external IP parameter
- Update all URL generation points to use external IP when configured:
  * Device configuration URLs (entity.py)
  * Printer URL sensor (printer.py)
  * Camera stream URLs (camera.py)
  * Thumbnail URLs (api.py)
- Add translation strings with helpful descriptions for the new field
- Maintain backward compatibility: auto-detection works when field is empty

The solution allows users in advanced network setups to manually specify
the externally routable IP address while maintaining automatic detection
for standard installations.

Fixes #284

* Fix external_ip not being passed to Printer.from_dict()

The external_ip configuration was not being passed as a config parameter
to Printer.from_dict(), causing the printer object to not have access to
the external_ip value at runtime. This resulted in the printer_url sensor
and other URL generation still using auto-detected IPs instead of the
configured external IP.

This fix ensures the config (including external_ip) is properly passed to
from_dict() so the Printer object's __init__ method can read it from the
config parameter.

* Persist external_ip when saving options flow

The external_ip value from user_input was not being applied to the
tested_printer before saving, causing it to be lost when users updated
other options. Now the external_ip is explicitly copied 

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -6,7 +6,11 @@
         "data": {
           "ip_address": "Printer IP Address",
           "centauri_carbon": "Is this an FDM Printer",
-          "proxy_enabled": "Enable the proxy server"
+          "proxy_enabled": "Enable the proxy server",
+          "external_ip": "External Address (optional, for advanced network setups)"
+        },
+        "data_description": {
+          "external_ip": "Override auto-detected address with an IP address or hostname. Leave blank for automatic detection. Use for Kubernetes/Docker setups or when behind a reverse proxy. Ports 3030 and 3031 will be appended automatically."
         }
       }
     }
@@ -25,7 +29,11 @@
         "description": "If you need help with the configuration have a look here: https://github.com/danielcherubini/elegoo-homeassistant",
         "data": {
           "ip_address": "Printer IP Address",
-          "proxy_enabled": "Enable the proxy server"
+          "proxy_enabled": "Enable the proxy server",
+          "external_ip": "External Address (optional, for advanced network setups)"
+        },
+        "data_description": {
+          "external_ip": "Override auto-detected address with an IP address or hostname. Leave blank for automatic detection. Use for Kubernetes/Docker setups or when behind a reverse proxy. Ports 3030 and 3031 will be appended automatically."
         }
       },
       "fdm_options": {
