fix: persist empty string passwords and add missing period in error message
- Fix empty string password persistence by using explicit None checks
  instead of falsy checks (empty string is falsy but valid)
- Capture working password from client after successful connection
  to ensure the actual working credential is saved to config entry
- Add missing trailing period to cc2_authentication_failed error message
  for consistency with other error messages

Fixes CodeRabbit review findings.

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -110,7 +110,7 @@
       "init_no_printer_found": "Failed to initialize: The printer could not be found.",
       "cc2_options_no_printer_found": "The CC2 printer could not be found.",
       "cc2_access_code_required": "This printer requires an access code for authentication.",
-      "cc2_authentication_failed": "Failed to authenticate. Verify access code in printer settings: Settings → Network → Access Code"
+      "cc2_authentication_failed": "Failed to authenticate. Verify access code in printer settings: Settings → Network → Access Code."
     },
     "abort": {
       "already_configured": "This entry is already configured."
