Fix CC2 printer authentication and connection failures (#330)
* fix: improve CC2 printer authentication and connection testing

Fixes authentication issues for CC2 (Centauri Carbon 2) printers by:

1. Config Flow Improvements:
   - Add two-step authentication flow asking users if access code is required
   - Implement actual connection testing during setup (no more silent failures)
   - Provide clear error messages with printer settings path when auth fails
   - Add helper method for connection attempts with proper error handling

2. Multi-Password Fallback:
   - Remove hardcoded default password from client initialization
   - Try multiple common passwords automatically when no code provided:
     * User-provided code (if any)
     * Empty password
     * Default "123456" password
   - Store working password for future connections
   - Enhanced error messages guiding users to check printer settings

3. Security:
   - Never log actual password values (only generic descriptions)
   - Use safe descriptions like "user-provided access code" in logs
   - Avoid credential exposure in log files

4. Translation Updates:
   - Add cc2_auth_check step with clear instructions
   - Add cc2_access_code_input step for password entry
   - Add cc2_authentication_failed error with actionable guidance

Resolves connection failures for users with:
- No password set (empty string)
- Default "123456" password
- Custom access codes

All changes are backward compatible with existing configurations.

* style: apply pre-commit formatting fixes

* fix: persist empty string passwords and add missing period in error message

- Fix empty string password persistence by using explicit None checks
  instead of falsy checks (empty string is falsy but valid)
- Capture working password from client after successful connection
  to ensure the actual working credential is saved to config entry
- Add missing trailing period to cc2_authentication_failed error message
  for consistency with other error mess

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -83,6 +83,20 @@
         "data": {
           "cc2_access_code": "Access Code (optional)"
         }
+      },
+      "cc2_auth_check": {
+        "title": "Centauri Carbon 2 Authentication",
+        "description": "Does your printer require an access code? Check: Settings → Network → Access Code. If 'Off' or blank, select No.",
+        "data": {
+          "requires_access_code": "Access Code Required?"
+        }
+      },
+      "cc2_access_code_input": {
+        "title": "Enter Access Code",
+        "description": "Find your printer's access code at: Settings → Network → Access Code",
+        "data": {
+          "cc2_access_code": "Access Code"
+        }
       }
     },
     "error": {
@@ -95,7 +109,8 @@
       "manual_options_no_printer_found": "The selected printer could not be found to apply options.",
       "init_no_printer_found": "Failed to initialize: The printer could not be found.",
       "cc2_options_no_printer_found": "The CC2 printer could not be found.",
-      "cc2_access_code_required": "This printer requires an access code for authentication."
+      "cc2_access_code_required": "This printer requires an access code for authentication.",
+      "cc2_authentication_failed": "Failed to authenticate. Verify access code in printer settings: Settings → Network → Access Code."
     },
     "abort": {
       "already_configured": "This entry is already configured."
