fix: improve CC2 authentication UI and add detailed logging
- Change access code question from dropdown to radio buttons (LIST mode)
  to prevent accidental default selection
- Reorder options to show 'Yes' first
- Add prominent description text with bold formatting and clear instructions
- Add comprehensive logging throughout CC2 auth flow:
  - When CC2 printer selected from discovery
  - When showing auth check form
  - When user submits their choice
  - When redirecting to password input or connection attempt
  - Connection test start/success with access code details
- Log access code presence (but not value) for debugging

This addresses user confusion where the authentication question may not
have been noticed, leading to connection failures.

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -86,9 +86,9 @@
       },
       "cc2_auth_check": {
         "title": "Centauri Carbon 2 Authentication",
-        "description": "Does your printer require an access code? Check: Settings → Network → Access Code. If 'Off' or blank, select No.",
+        "description": "**IMPORTANT:** Check your printer's access code setting before continuing.\n\nOn your printer, go to: **Settings → Network → Access Code**\n\n• If the setting shows 'Off' or is blank/empty, select **No**\n• If you have set a custom access code, select **Yes**\n\nMost printers ship with no access code by default.",
         "data": {
-          "requires_access_code": "Access Code Required?"
+          "requires_access_code": "Does your printer require an access code?"
         }
       },
       "cc2_access_code_input": {
